2006-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Define OFF_T_STRTOL.
	* configure.in: Check for strtol and strtoll.

2006-11-02  Ian Turner <ian@zmanda.com>
	* common-src/amanda.h: Use atol if atoll is missing.

2006-11-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Better message on invalid size.

2006-11-02  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: List bsdudp as a udp transport.

2006-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Don't use 0 for NULL.

2006-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	Revert Ian patch of 2006-10-29.
	* common-src/conffile.c: Defile AMANDATES_FILE
	* client-src/amandates.h: Don't define AMANDATES_FILE

2006-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Rename DUMPTYPE_START_T to DUMPTYPE_STARTTIME.
	* common-src/conffile.h: Rename DUMPTYPE_START_T to DUMPTYPE_STARTTIME.
	* server-src/amadmin.c (disklist_one): Print correct starttime.
	* server-src/diskfile.c: Set start_t to starttime.
	* server-src/diskfile.h (disk_t): Add starttime.

2006-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/scsi-changer-driver.c: Add Tandberg SLR100,
	                                     more debugging.
	* changer-src/sense.c: Add Tandberg SLR100 Tape Drive "SLR100".

2006-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Define dbrename if !DEBUG_CODE.
	* restore-src/amidxtaped.c: Declare i if !DEBUG_CODE.

2006-10-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c (disklist_one): Print ignore field.
	* server-src/amoverview.pl.in: Ignore 'ignore yes' and 'strategy skip'.
	* server-src/diskfile.c: Correct hostname allocation.
	                         Keep 'ignore yes' and 'strategy skip' DLE in
				 memory, set there todo to 0.
	* server-src/diskfile.h: (struct disk_s): New ignore field.

2006-10-29  Ian Turner <ian@zmanda.com>